--- a/src/SFA.DAS.ProviderRelationships.Audit/packages.config
+++ b/src/SFA.DAS.ProviderRelationships.Audit/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="MediatR" version="5.1.0" targetFramework="net462" />
   <package id="StructureMap" version="4.7.0" targetFramework="net462" />
   <package id="System.Reflection.Emit.Lightweight" version="4.3.0" targetFramework="net462" />
 </packages>
