--- a/src/SFA.DAS.ProviderRelationships.Web/SFA.DAS.ProviderRelationships.Web.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Web/SFA.DAS.ProviderRelationships.Web.csproj
@@ -129,6 +129,7 @@
     <Compile Include="Authentication\PostAuthenticationHandler.cs" />
     <Compile Include="Authorization\AuthorizationContextProvider.cs" />
     <Compile Include="Authorization\LocalAuthorizationHandler.cs" />
+    <Compile Include="Controllers\OperationsController.cs" />
     <Compile Include="Controllers\HealthCheckController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\AccountProviderLegalEntitiesController.cs" />
@@ -164,12 +165,12 @@
     <Compile Include="RouteValues\AccountProviders\GetAccountProviderRouteValues.cs" />
     <Compile Include="RouteValues\AccountProviders\InvitationAccountProviderRouteValues.cs" />
     <Compile Include="RouteValues\HealthCheck\HealthCheckRouteValues.cs" />
+    <Compile Include="RouteValues\Operations\OperationRouteValue.cs" />
     <Compile Include="RouteValues\RouteValueKeys.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="Urls\EmployerUrls.cs" />
     <Compile Include="Urls\IEmployerUrls.cs" />
     <Compile Include="ViewModels\AccountProviderLegalEntities\GetAccountProviderLegalEntityViewModel.cs" />
-    <Compile Include="ViewModels\AccountProviderLegalEntities\OperationViewModel.cs" />
     <Compile Include="ViewModels\AccountProviderLegalEntities\UpdateAccountProviderLegalEntityViewModel.cs" />
     <Compile Include="ViewModels\AccountProviderLegalEntities\UpdatedAccountProviderLegalEntityViewModel.cs" />
     <Compile Include="ViewModels\HealthCheck\HealthCheckViewModel.cs" />
@@ -179,6 +180,9 @@
     <Compile Include="ViewModels\AccountProviders\AlreadyAddedAccountProviderViewModel.cs" />
     <Compile Include="ViewModels\AccountProviders\FindProviderViewModel.cs" />
     <Compile Include="ViewModels\AccountProviders\GetAccountProviderViewModel.cs" />
+    <Compile Include="ViewModels\Operations\ConfirmOperationViewModel.cs" />
+    <Compile Include="ViewModels\Operations\OperationViewModel.cs" />
+    <Compile Include="ViewModels\Operations\UpdateOperationViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\lib\jquery\dist\jquery-3.3.1.js" />
@@ -278,6 +282,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\AccountProviders\AccountProvidersWithSingleOrganisation.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Operations\Set.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Operations\Confirm.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
