--- a/src/SFA.DAS.ProviderRelationships.Api/SFA.DAS.ProviderRelationships.Api.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Api/SFA.DAS.ProviderRelationships.Api.csproj
@@ -90,7 +90,7 @@
     </PackageReference>
     <PackageReference Include="SFA.DAS.Validation" Version="5.1.3" />
     <PackageReference Include="StructureMap" Version="4.7.1" />
-    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="4.0.4.403061554" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="4.0.0" />
     <PackageReference Include="WebApi.StructureMap" Version="1.0.21" />
   </ItemGroup>
   <ItemGroup>
