--- a/src/SFA.DAS.ProviderRelationships.Web/Web.config
+++ b/src/SFA.DAS.ProviderRelationships.Web/Web.config
@@ -308,8 +308,8 @@
                 <bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0"/>
             </dependentAssembly>
             <dependentAssembly>
-                <assemblyIdentity name="System.Diagnostics.DiagnosticSource" publicKeyToken="CC7B13FFCD2DDD51" culture="neutral"/>
-                <bindingRedirect oldVersion="0.0.0.0-4.0.3.1" newVersion="4.0.3.1"/>
+                <assemblyIdentity name="Microsoft.EntityFrameworkCore" publicKeyToken="ADB9793829DDAE60" culture="neutral"/>
+                <bindingRedirect oldVersion="0.0.0.0-2.1.4.0" newVersion="2.2.0.0"/>
             </dependentAssembly>
             <dependentAssembly>
                 <assemblyIdentity name="System.ComponentModel.Annotations" publicKeyToken="B03F5F7F11D50A3A" culture="neutral"/>
