--- a/src/SFA.DAS.ProviderRelationships/SFA.DAS.ProviderRelationships.csproj
+++ b/src/SFA.DAS.ProviderRelationships/SFA.DAS.ProviderRelationships.csproj
@@ -44,6 +44,7 @@
 
     <ItemGroup>
         <Reference Include="System" />
+        <Reference Include="System.Web" />
     </ItemGroup>
 
 </Project>
