--- a/src/SFA.DAS.ProviderRelationships.Api.UnitTests/SFA.DAS.ProviderRelationships.Api.UnitTests.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Api.UnitTests/SFA.DAS.ProviderRelationships.Api.UnitTests.csproj
@@ -1,24 +1,23 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
-    <PropertyGroup>
-        <LangVersion>latest</LangVersion>
-        <TargetFramework>net462</TargetFramework>
-        <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-    </PropertyGroup>
-
-    <ItemGroup>
-        <PackageReference Include="Microsoft.AspNet.WebApi" Version="5.2.6" />
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
-        <PackageReference Include="Moq" Version="4.10.1" />
-        <PackageReference Include="NUnit" Version="3.11.0" />
-        <PackageReference Include="NUnit3TestAdapter" Version="3.12.0" />
-        <PackageReference Include="SFA.DAS.Testing" Version="2.0.5" />
-        <PackageReference Include="SFA.DAS.Validation" Version="5.1.3" />
-    </ItemGroup>
-
-    <ItemGroup>
-        <ProjectReference Include="..\SFA.DAS.ProviderRelationships.Api\SFA.DAS.ProviderRelationships.Api.csproj" />
-        <ProjectReference Include="..\SFA.DAS.ProviderRelationships\SFA.DAS.ProviderRelationships.csproj" />
-    </ItemGroup>
-
+  <PropertyGroup>
+    <LangVersion>latest</LangVersion>
+    <TargetFramework>net6.0</TargetFramework>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+  </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.WebApi" Version="5.2.6" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
+    <PackageReference Include="Moq" Version="4.10.1" />
+    <PackageReference Include="NUnit" Version="3.11.0" />
+    <PackageReference Include="SFA.DAS.Testing" Version="2.0.5" />
+    <PackageReference Include="SFA.DAS.Validation" Version="5.1.3" />
+    <PackageReference Include="NUnit3TestAdapter" Version="4.4.0" />
+    <PackageReference Include="Microsoft.DotNet.UpgradeAssistant.Extensions.Default.Analyzers" Version="0.4.410601">
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SFA.DAS.ProviderRelationships.Api\SFA.DAS.ProviderRelationships.Api.csproj" />
+    <ProjectReference Include="..\SFA.DAS.ProviderRelationships\SFA.DAS.ProviderRelationships.csproj" />
+  </ItemGroup>
 </Project>
